[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/PlayerAnimation.tscn" type="PackedScene" id=3]
[ext_resource path="res://GFX/BG/bg_layer1.png" type="Texture" id=4]
[ext_resource path="res://GFX/BG/bg_layer2.png" type="Texture" id=5]
[ext_resource path="res://GFX/BG/bg_layer3.png" type="Texture" id=6]
[ext_resource path="res://GFX/BG/bg_layer4.png" type="Texture" id=7]
[ext_resource path="res://SFX/SFX_Jump_22.wav" type="AudioStream" id=8]

[node name="Player" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="PlayerAnimation" parent="." index="0" instance=ExtResource( 3 )]

[node name="Camera2D" type="Camera2D" parent="." index="2"]
offset = Vector2( 0, -300 )
current = true
zoom = Vector2( 2, 2 )
limit_smoothed = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="Camera2D" index="0"]
scroll_base_offset = Vector2( 0, -750 )
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="Camera2D/ParallaxBackground" index="0"]
modulate = Color( 0.972549, 0.407843, 0.407843, 1 )
motion_mirroring = Vector2( 2048, 2048 )

[node name="TextureRect" type="TextureRect" parent="Camera2D/ParallaxBackground/ParallaxLayer" index="0"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Camera2D/ParallaxBackground" index="1"]
modulate = Color( 0.54902, 0.666667, 0.592157, 1 )
motion_scale = Vector2( 0.25, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="Camera2D/ParallaxBackground/ParallaxLayer2" index="0"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Camera2D/ParallaxBackground" index="2"]
modulate = Color( 0.917647, 0.960784, 0.2, 1 )
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="Camera2D/ParallaxBackground/ParallaxLayer3" index="0"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="Camera2D/ParallaxBackground" index="3"]
modulate = Color( 0.878431, 0.384314, 0.870588, 1 )
motion_scale = Vector2( 0.75, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="Camera2D/ParallaxBackground/ParallaxLayer4" index="0"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="JumpSFX" type="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource( 8 )
volume_db = -5.0

[node name="LevelClearance" type="Timer" parent="." index="4"]
wait_time = 10.0
one_shot = true

[connection signal="animate" from="." to="PlayerAnimation" method="_on_Player_animate"]
[connection signal="timeout" from="LevelClearance" to="." method="_on_LevelClearance_timeout"]
